force-app/main/default/objects/Temp_Lead__c/Temp_Lead__c.object-meta.xml
<CustomObject>
    <description>The basic information for a Lead coming from a variety of Lead Sources. Successfully mapped records can be safely deleted. By creating this temporary record, we can decouple the transformation logic and the integration logic.</description>
    <label>Temp Lead</label>
    <nameField>
        <displayFormat>TL-{000}</displayFormat>
        <label>Temp Lead</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>