force-app/main/default/objects/Temp_Lead__c/fields/Estimated_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Household_Income__c</fullName>
    <description>The general range of income for the lead/contact.</description>
    <label>Estimated Household Income</label>
    <length>20</length>
    <type>Text</type>
</CustomField>