force-app/main/default/objects/Temp_Lead__c/fields/Lead_City__c.field-meta.xml
<CustomField>
    <fullName>Lead_City__c</fullName>
    <description>The city name of the lead&apos;s residence.</description>
    <label>Lead City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>