force-app/main/default/objects/Temp_Lead__c/fields/Lead_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Country_Code__c</fullName>
    <description>A two or three letter country code representing the Lead&apos;s country location.</description>
    <label>Lead Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>