force-app/main/default/objects/Temp_Lead__c/fields/Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email__c</fullName>
    <label>Lead Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>