force-app/main/default/objects/Temp_Lead__c/fields/Lead_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Name__c</fullName>
    <label>Lead Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>