force-app/main/default/objects/Temp_Lead__c/fields/Lead_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone_Number__c</fullName>
    <label>Lead Phone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>