force-app/main/default/objects/Temp_Lead__c/fields/Lead_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Postal_Code__c</fullName>
    <description>The postal code of the Lead&apos;s residence.</description>
    <label>Lead Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>