force-app/main/default/objects/Temp_Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>As leads can come from many marketing channels, this helps with attribution.</description>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>