force-app/main/default/objects/Temp_Lead__c/fields/Lead_State__c.field-meta.xml
<CustomField>
    <fullName>Lead_State__c</fullName>
    <description>The two digit state code for US based addresses.</description>
    <label>Lead State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>