force-app/main/default/objects/Temp_Lead__c/fields/Lead_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Lead_Street_Address__c</fullName>
    <description>The street number and street name for the lead.</description>
    <label>Lead Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>