force-app/main/default/objects/Temp_Lead__c/fields/Vendor_Segment_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Segment_Id__c</fullName>
    <description>Some temp leads come from 3rd party partners. The term used by the marketing team is Vendor Segment. This represents that relationship.</description>
    <label>Vendor Segment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>